--- a/beginning/part2/css/styles.css
+++ b/beginning/part2/css/styles.css
@@ -1,8 +1,10 @@
 body {
     background-color: #efefef;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
 }
 
-a { 
+.menu a { 
     text-decoration: none;
     color: black;
 }
@@ -11,7 +13,14 @@ h1 {
     font-weight: bold;
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
-    padding-bottom: 20px;
+}
+
+.features h1 {
+    padding-bottom: 10px;
+}
+
+.welcome h1 {
+    padding-bottom: 30px;
 }
 
 .button {
@@ -48,15 +57,15 @@ nav img {
 section {
     display: flex;
     flex-direction: column;
-    border: 1px solid black;
+    /*border: 1px solid black;*/
     padding: 20px;
     align-self: center;
-    padding: 90px 0px 20px 40px;
 }
 
 .welcome {
     background-color: #FFCF83;
     height: 300px;
+    padding: 90px 0px 20px 40px;
 }
 
 .welcome ul {
@@ -73,4 +82,108 @@ section {
     bottom: 100px;
     height: 80%;
     left:70px
+}
+
+.features h1 {
+    text-align: center;
+}
+
+.features img {
+    height: auto;
+    width: 200px;
+}
+
+.features ul {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    width: 300px;
+}
+
+.features li {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
+
+.features div ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    text-align: center;
+}
+
+.features a {
+    color: #FFCF83;
+}
+
+h3 {
+    font-weight: bold;
+}
+
+.testimonials {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #222e50;
+}
+
+strong {
+    font-weight: bold;
+}
+
+.testimonials h1 {
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    color: white;
+}
+
+.testimonials div ul {
+    display: flex;
+    background-color: white;
+    width: 300px;
+    flex-direction: column;
+    height: 170px;
+}
+
+.testimonials ul {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    width: 300px;
+}
+
+.testimonials li {
+    display: flex;
+    padding: 20px;
+}
+
+.team h1 {
+    padding-bottom: 20px;
+    text-align: center;
+}
+
+.team ul {
+    display: flex;
+    text-align: center;
+}
+
+.team li {
+    padding: 10px;
+}
+
+.team em {
+    font-style: italic;
+}
+
+footer {
+    text-align: center;
+    background-color: lightgray;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+footer img {
+    height: 40px;
+    padding-bottom: 10px;
 }
